[gd_scene load_steps=6 format=3 uid="uid://dqmrmkf0k8wgw"]

[ext_resource type="Script" uid="uid://covnqteot2xrf" path="res://ui/ui.gd" id="1_m6e0p"]
[ext_resource type="FontFile" uid="uid://dc7dxafyie71e" path="res://sprites/ComicRelief-Regular.ttf" id="2_27fn8"]
[ext_resource type="PackedScene" uid="uid://kpkqihk2lgdb" path="res://ui/heart_icon.tscn" id="3_27fn8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27fn8"]
bg_color = Color(0.18039216, 0.53333336, 0.38431373, 0.49019608)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_m6e0p"]
default_font_size = 50

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6e0p")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1068.0
offset_top = 45.0
offset_right = 1118.0
offset_bottom = 98.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "[][]"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 789.0
offset_top = 16.0
offset_right = 1038.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_27fn8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = -10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_27fn8")
theme_override_font_sizes/font_size = 64
text = "x9"

[node name="HeartIcon" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_27fn8")]
layout_mode = 2
expand_mode = 2

[node name="LevelName" type="Label" parent="."]
layout_mode = 1
offset_left = 14.0
offset_top = 13.0
offset_right = 556.0
offset_bottom = 82.0
theme = SubResource("Theme_m6e0p")
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_27fn8")
theme_override_font_sizes/font_size = 40
text = "INSERT LEVEL NAME HERE"
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
